--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -57,9 +57,6 @@
 	</div>
 	<div class="footer"></div>
 </div>
-<script src="http://code.jquery.com/jquery-latest.js"></script>
-<script src="http://ajax.microsoft.com/ajax/jquery.templates/beta1/jquery.tmpl.min.js"></script>
-<script src="./static/bootstrap/js/bootstrap.min.js"></script>
-<script src="./static/js/test.js"></script>
+<script data-main="./public/boot" type="text/javascript" src="./public/js/libs/require.js"></script>
 </body>
 </html>
